--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="passengernamecontainer">
                 <h3>Nome passeggero</h3>
 
-                <div id="passengername">
+                <div id="passengernamefinal">
 
 
 
@@ -100,7 +100,7 @@
                 </div>
 
                 <div id="passengerwagonactive">
-
+                    5
                 </div>
 
             </div>
@@ -112,7 +112,7 @@
                 </div>
 
                 <div id="cpcodeactive">
-
+                    #356 - 453
                 </div>
 
             </div>
